--- a/main.css
+++ b/main.css
@@ -28,7 +28,9 @@ body {
     height: 100%;    
     display: inline-block;
     font-size: 20px;
+    color: rgb(255, 255, 255);
 
     text-align: center;
     outline: solid rgb(0, 0, 0);
+    
 }
